# Codex-Cli-Captain-Release

./: .gitignore  Cargo.toml  README.ja.md  README.ko.md  README.md  install.ps1  install.sh  release-repo-manifest.json
docs/: install.md  project-plan.md
docs/release/: README.md  RELEASE_WORKFLOW.md  VALIDATION_RUNBOOK.md
rust/ccc-mcp/: Cargo.toml
rust/ccc-mcp/src/: activity_view.rs  captain_intervention.rs  cli_io.rs  cli_output.rs  code_graph.rs  config_io.rs  entry_arguments.rs  entry_policy.rs  execution_contract.rs  graph_context.rs  host_subagent_lifecycle.rs  install_check.rs  lifecycle_hooks.rs  long_session.rs  main.rs  main_tests.rs  mcp_dispatch.rs  mcp_tools.rs  mcp_transport.rs  memory.rs  orchestration_attempt.rs  orchestration_state.rs  parallel_fanout.rs  request_routing.rs  review_policy.rs  run_bootstrap.rs  run_locator.rs  scheduler_transition.rs  setup_config.rs  skill_manifest.rs  skill_registry.rs  specialist_roles.rs  status_app_panel.rs  status_compact.rs  status_cost_routing.rs  status_payload.rs  status_render.rs  subagent_update.rs  subagent_update_validation.rs  target_workspace.rs  (+7 more)
rust/ccc-mcp/tests/: plugin_package.rs
schemas/: advisor.schema.json  ccc-config.schema.json  delegation.schema.json  explore-artifact.schema.json  handoff.schema.json  longway.schema.json  orchestration-attempt.schema.json  orchestrator-decision.schema.json  orchestrator-state.schema.json  resume-checkpoint.schema.json  role-defaults.schema.json  run.schema.json  task-card.schema.json  verification.schema.json  way-update.schema.json  way.schema.json
(+49 files in other folders)
