[package]
name = "ccc"
version = "0.0.15-pre"
edition = "2021"
license = "UNLICENSED"
description = "Rust-only CCC runtime and installer for Codex CLI."

[dependencies]
chrono = { version = "0.4", default-features = true, features = ["clock"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
toml = "0.8"
